[package]
name = "nce_qualifiers"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"

[[bench]]
name = "parser"
harness = false
path = "benches/parser.rs"

[dependencies]
error-stack = "0.4.1"
heck = "0.4.1"
once_cell = "1.18.0"
regex = "1.10.2"
sqlite = "0.31.1"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.5.1"
